--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
   </header>
 
   <h1>ASDA Code 128 Generator</h1>
+  <p>Made By @Ayz_xx On DISCORD.</p>
 
   <label for="ean">Barcode number (8, 12 or 13 digits)</label>
   <input id="ean" type="text" inputmode="numeric" minlength="8" maxlength="13" placeholder="e.g. 0123456789012">
