--- a/index.html
+++ b/index.html
@@ -6,55 +6,112 @@
   <title>ASDA Code 128 Generator</title>
   <style>
     body {
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
+      font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
       max-width: 900px;
-      margin: 28px auto;
-      padding: 0 18px;
-      background-color: #78BE20;
-      color: #000;
+      margin: 40px auto;
+      padding: 0 20px;
+      background: linear-gradient(135deg, #78BE20 0%, #a3e07c 100%);
+      color: #111;
       text-align: center;
     }
+
+    /* Logo */
     header img {
       max-width: 220px;
-      margin-bottom: 20px;
+      margin-bottom: 25px;
+      background: #fff;
+      padding: 12px;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
     }
+
+    /* Headings */
+    h1 {
+      font-size: 2rem;
+      margin-bottom: 8px;
+      color: #fff;
+      text-shadow: 1px 1px 2px rgba(0,0,0,0.4);
+    }
+    p {
+      margin-bottom: 22px;
+      font-size: 1rem;
+      color: #222;
+      font-weight: 500;
+    }
+
+    /* Inputs */
     input[type=text], input[type=password] {
       width: 100%;
-      padding: 10px;
+      padding: 12px 14px;
       font-size: 16px;
-      border: 2px solid #000;
-      border-radius: 6px;
+      border: 2px solid #444;
+      border-radius: 10px;
       background: #fff;
       color: #000;
-      margin-bottom: 12px;
+      margin-bottom: 16px;
+      transition: border 0.3s, box-shadow 0.3s;
     }
-    input::placeholder { color: #555; }
+    input[type=text]:focus, input[type=password]:focus {
+      border-color: #78BE20;
+      box-shadow: 0 0 6px rgba(120,190,32,0.6);
+      outline: none;
+    }
+    input::placeholder { color: #777; }
+
+    /* Buttons */
     button {
-      margin-top: 12px;
-      padding: 10px 16px;
+      margin: 10px 6px;
+      padding: 12px 20px;
       font-size: 16px;
-      border-radius: 8px;
+      border-radius: 10px;
       border: 2px solid #000;
-      background: #78BE20;
-      color: #000;
+      background: #fff;
+      font-weight: 600;
+      color: #111;
       cursor: pointer;
-      transition: background 0.3s, color 0.3s;
+      transition: all 0.3s ease;
+      box-shadow: 0 3px 8px rgba(0,0,0,0.15);
     }
-    button:hover { background: #000; color: #78BE20; }
+    button:hover {
+      background: #000;
+      color: #78BE20;
+      transform: translateY(-2px);
+    }
+    button:active {
+      transform: translateY(0);
+      box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+    }
+
+    /* Result box */
     #result {
-      margin-top: 18px;
-      padding: 14px;
-      border: 2px dashed #000;
-      border-radius: 8px;
+      margin-top: 25px;
+      padding: 18px;
+      border: 2px dashed #444;
+      border-radius: 12px;
       background: #fff;
       color: #000;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
     }
-    .error { color: #a00; }
+
+    /* Error text */
+    .error {
+      color: #c62828;
+      font-weight: bold;
+    }
+
+    /* Barcode display */
     svg {
       background: #fff;
-      padding: 6px;
-      border-radius: 6px;
-      margin-top: 10px;
+      padding: 8px;
+      border-radius: 8px;
+      margin-top: 14px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    }
+
+    /* Extra text */
+    #extraOut {
+      font-size: 1rem;
+      color: #333;
     }
   </style>
 </head>
@@ -71,10 +128,10 @@
   <label for="ean">Barcode number (8, 12 or 13 digits)</label>
   <input id="ean" type="text" inputmode="numeric" minlength="8" maxlength="13" placeholder="e.g. 0123456789012">
 
-  <label for="serial">Serial / suffix (numeric) — default: 000001196</label>
+  <label for="serial">Serial / suffix (numeric) — Use This If You Don't Have One: 000011961</label>
   <input id="serial" type="text" inputmode="numeric" minlength="1" maxlength="20" placeholder="optional, default 000001196">
 
-  <label for="extraText">Extra text (optional)</label>
+  <label for="extraText">Product Name (optional)</label>
   <input id="extraText" type="text" placeholder="e.g. Product name or note">
 
   <button id="generate">Generate Code 128</button>
@@ -171,4 +228,4 @@
     });
   </script>
 </body>
-  </html>
+</html>
