--- a/index.html
+++ b/index.html
@@ -124,6 +124,13 @@
   <h2 style="margin-bottom:12px; font-size:1.2rem; color:#111;">Enter PIN to Access Generator</h2>
   <input id="pinInput" type="password" placeholder="Enter PIN" maxlength="6" style="width:100%; padding:12px; font-size:16px; border:2px solid #444; border-radius:8px; margin-bottom:12px;">
   <button id="pinSubmit" style="padding:10px 20px; border:2px solid #000; border-radius:8px; background:#78BE20; color:#000; font-weight:bold; cursor:pointer;">Unlock</button>
+  <p style="margin-top:20px; font-size:1rem; color:#111; font-weight:500;">
+  No PIN? Join our Discord: 
+  <a href="https://discord.gg/pDpRaSCP6R" target="_blank" style="color:#78BE20; font-weight:bold; text-decoration:none;">
+    Click Here
+  </a>
+</p>
+
   <div id="pinMessage" style="margin-top:10px; font-weight:bold;"></div>
 </div>
 
