--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
 <!-- PIN Section -->
 <div id="pinSection" style="margin-top:40px; padding:20px; background:#fff; border:2px solid #444; border-radius:12px; max-width:400px; margin-left:auto; margin-right:auto; box-shadow:0 4px 10px rgba(0,0,0,0.1);">
-  <h2 style="margin-bottom:12px; font-size:1.2rem; color:#111;">Enter PIN to Access Generator</h2>
+  <h2 style="margin-bottom:12px; font-size:1.2rem; color:#111;">Enter PIN to Access Asda 1p Barcode Generator</h2>
   <input id="pinInput" type="password" placeholder="Enter PIN" maxlength="6" style="width:100%; padding:12px; font-size:16px; border:2px solid #444; border-radius:8px; margin-bottom:12px;">
   <button id="pinSubmit" style="padding:10px 20px; border:2px solid #000; border-radius:8px; background:#78BE20; color:#000; font-weight:bold; cursor:pointer;">Unlock</button>
   <p style="margin-top:20px; font-size:1rem; color:#111; font-weight:500;">
