--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
   <button id="pinSubmit" style="padding:10px 20px; border:2px solid #000; border-radius:8px; background:#78BE20; color:#000; font-weight:bold; cursor:pointer;">Unlock</button>
   <p style="margin-top:20px; font-size:1rem; color:#111; font-weight:500;">
   No PIN? Join our Discord: 
-  <a href="https://discord.gg/pDpRaSCP6R" target="_blank" style="color:#78BE20; font-weight:bold; text-decoration:none;">
+  <a href="https://discord.gg/SxEDzUu78h" target="_blank" style="color:#78BE20; font-weight:bold; text-decoration:none;">
     Click Here
   </a>
 </p>
